[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/DropItemPanel.gd" type="Script" id=1]
[ext_resource path="res://UI/UI Buttons/Minimize.gd" type="Script" id=2]

[node name="DropItemPanel" type="VBoxContainer"]
offset_right = 220.0
offset_bottom = 28.0
script = ExtResource( 1 )

[node name="FirstRow" type="HBoxContainer" parent="."]
offset_right = 318.0
offset_bottom = 28.0
size_flags_horizontal = 3

[node name="Minimize" type="Button" parent="FirstRow"]
offset_right = 12.0
offset_bottom = 28.0
script = ExtResource( 2 )
control_to_minimize = NodePath("../../SecondRow")
property_to_toggle = "visible"
minimize_text = "V"
maximize_text = ">"

[node name="ItemNameLabel" type="Label" parent="FirstRow"]
offset_left = 16.0
offset_right = 147.0
offset_bottom = 28.0
clip_contents = true
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Item name placeholder"
valign = 1

[node name="HFlowContainer" type="VFlowContainer" parent="FirstRow"]
offset_left = 151.0
offset_right = 318.0
offset_bottom = 28.0

[node name="ItemNumSpinBox" type="SpinBox" parent="FirstRow/HFlowContainer"]
offset_right = 62.0
offset_bottom = 28.0
size_flags_vertical = 3
max_value = 99.0
value = 1.0

[node name="Label" type="Label" parent="FirstRow/HFlowContainer"]
offset_left = 66.0
offset_top = 5.0
offset_right = 78.0
offset_bottom = 23.0
size_flags_vertical = 6
text = "to"

[node name="MaxItemNumSpinBox" type="SpinBox" parent="FirstRow/HFlowContainer"]
offset_left = 82.0
offset_right = 144.0
offset_bottom = 28.0
size_flags_vertical = 3
min_value = 1.0
max_value = 99.0
value = 1.0

[node name="RemoveButton" type="Button" parent="FirstRow/HFlowContainer"]
offset_left = 148.0
offset_right = 167.0
offset_bottom = 28.0
size_flags_vertical = 3
text = "X"

[node name="SecondRow" type="GridContainer" parent="."]
offset_left = 180.0
offset_top = 32.0
offset_right = 318.0
offset_bottom = 122.0
size_flags_horizontal = 8

[node name="GridContainer" type="GridContainer" parent="SecondRow"]
offset_right = 138.0
offset_bottom = 60.0
columns = 2

[node name="DropChanceLabel" type="Label" parent="SecondRow/GridContainer"]
offset_top = 5.0
offset_right = 72.0
offset_bottom = 23.0
text = "Drop Chance"

[node name="DropChanceSpinBox" type="SpinBox" parent="SecondRow/GridContainer"]
offset_left = 76.0
offset_right = 138.0
offset_bottom = 28.0
tooltip_text = "Determines the chances there are for there to be drop at all or not"
min_value = 1.0
value = 100.0
rounded = true
suffix = "%"

[node name="QualityLabel" type="Label" parent="SecondRow/GridContainer"]
offset_top = 37.0
offset_right = 72.0
offset_bottom = 55.0
text = "Quality"

[node name="QualitySpinBox" type="SpinBox" parent="SecondRow/GridContainer"]
offset_left = 76.0
offset_top = 32.0
offset_right = 138.0
offset_bottom = 60.0

[node name="HiddenCheckBox" type="CheckBox" parent="SecondRow"]
offset_left = 70.0
offset_top = 64.0
offset_right = 138.0
offset_bottom = 90.0
size_flags_horizontal = 8
text = "Hidden"

[connection signal="value_changed" from="FirstRow/HFlowContainer/ItemNumSpinBox" to="." method="_on_ItemNumSpinBox_value_changed"]
[connection signal="value_changed" from="FirstRow/HFlowContainer/MaxItemNumSpinBox" to="." method="_on_MaxItemNumSpinBox_value_changed"]
[connection signal="pressed" from="FirstRow/HFlowContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="value_changed" from="SecondRow/GridContainer/DropChanceSpinBox" to="." method="_on_DropChanceSpinBox_value_changed"]
[connection signal="value_changed" from="SecondRow/GridContainer/QualitySpinBox" to="." method="_on_QualitySpinBox_value_changed"]
[connection signal="toggled" from="SecondRow/HiddenCheckBox" to="." method="_on_HiddenCheckBox_toggled"]
